[package]
name = "bar_daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log_to_linear = {path = "../../.log_to_linear"}
clap = { version = "4.5.41", features = ["derive"] }
futures-util = "0.3.31"
postcard = { version = "1.1.3", features = ["use-std"] }
serde = { version = "1.0.219", features = ["serde_derive", "derive"] }
thiserror = "1.0.33"
tokio = { version = "1.20.1", features = ["full"] }
